--- a/DynamicTileFlow/appsettings.json
+++ b/DynamicTileFlow/appsettings.json
@@ -80,7 +80,9 @@
       "Port": 32168,
       "Name": "AI",
       "Type": "CodeProjectAI",
-      "TimeoutInSeconds": 2
+      "TimeoutInSeconds": 2,
+      "IsSSL": false,
+      "MovingAverageAlpha": 0.1
     },
     {
       "Endpoint": "/v1/vision/detection",
@@ -88,7 +90,9 @@
       "Port": 32168,
       "Name": "JF",
       "Type": "CodeProjectAI",
-      "TimeoutInSeconds": 2
+      "TimeoutInSeconds": 2,
+      "IsSSL": false,
+      "MovingAverageAlpha": 0.1
     },
     {
       "Endpoint": "/v1/vision/detection",
@@ -96,7 +100,9 @@
       "Port": 32168,
       "Name": "LT",
       "Type": "CodeProjectAI",
-      "TimeoutInSeconds": 2
+      "TimeoutInSeconds": 2,
+      "IsSSL": false,
+      "MovingAverageAlpha": 0.1
     },
     {
       "Endpoint": "/v1/vision/detection",
@@ -104,7 +110,9 @@
       "Port": 32168,
       "Name": "SS",
       "Type": "CodeProjectAI",
-      "TimeoutInSeconds": 2
+      "TimeoutInSeconds": 2,
+      "IsSSL": false,
+      "MovingAverageAlpha": 0.1
     }
   ]
   //    "Endpoint": "/v2/models/yolov8/infer", //    "ServerName": "192.168.247.170", //    "Port": 8000, //    "Name": "AITENSOR", //    "Type": "Tensor", //    "TimeoutInSeconds": 2, //    "MaxBatchSize": 5, //    "Labels": [ //      "person", //      "bicycle", //      "car", //      "motorcycle", //      "airplane", //      "bus", //      "train", //      "truck", //      "boat", //      "traffic light", //      "fire hydrant", //      "stop sign", //      "parking meter", //      "bench", //      "bird", //      "cat", //      "dog", //      "horse", //      "sheep", //      "cow", //      "elephant", //      "bear", //      "zebra", //      "giraffe", //      "backpack", //      "umbrella", //      "handbag", //      "tie", //      "suitcase", //      "frisbee", //      "skis", //      "snowboard", //      "sports ball", //      "kite", //      "baseball bat", //      "baseball glove", //      "skateboard", //      "surfboard", //      "tennis racket", //      "bottle", //      "wine glass", //      "cup", //      "fork", //      "knife", //      "spoon", //      "bowl", //      "banana", //      "apple", //      "sandwich", //      "orange", //      "broccoli", //      "carrot", //      "hot dog", //      "pizza", //      "donut", //      "cake", //      "chair", //      "couch", //      "potted plant", //      "bed", //      "dining table", //      "toilet", //      "tv", //      "laptop", //      "mouse", //      "remote", //      "keyboard", //      "cell phone", //      "microwave", //      "oven", //      "toaster", //      "sink", //      "refrigerator", //      "book", //      "clock", //      "vase", //      "scissors", //      "teddy bear", //      "hair drier", //      "toothbrush" //    ] //  }
