Added packaged font for Linux

--- a/DynamicTileFlow/DynamicTileFlow.csproj
+++ b/DynamicTileFlow/DynamicTileFlow.csproj
@@ -24,6 +24,9 @@
 	  <None Update="README.txt">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </None>
+	  <None Update="Resources\Roboto-Regular.ttf">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 
 </Project>
