Added configurable timeout for servers, fixed Deactivate to set the AvgRoundTrip to a high number

--- a/DynamicTileFlow/appsettings.json
+++ b/DynamicTileFlow/appsettings.json
@@ -61,6 +61,7 @@
   ],
   "IOUThreshold": 0.33,
   "MinConfidence": 0.45,
+  "InactiveServerCheckTimeoutSeconds": 300,
   "Kestrel": {
     "Endpoints": {
       "Http": {
@@ -78,7 +79,7 @@
       "Type": "CodeProjectAI",
       "TimeoutInSeconds": 2,
       "IsSSL": false,
-      "MovingAverageAlpha": 0.1
+      "MovingAverageAlpha": 0.25
     },
     {
       "Endpoint": "/v1/vision/detection",
@@ -88,7 +89,7 @@
       "Type": "CodeProjectAI",
       "TimeoutInSeconds": 2,
       "IsSSL": false,
-      "MovingAverageAlpha": 0.1
+      "MovingAverageAlpha": 0.25
     },
     {
       "Endpoint": "/v1/vision/detection",
@@ -98,7 +99,7 @@
       "Type": "CodeProjectAI",
       "TimeoutInSeconds": 2,
       "IsSSL": false,
-      "MovingAverageAlpha": 0.1
+      "MovingAverageAlpha": 0.25
     },
     {
       "Endpoint": "/v1/vision/detection",
@@ -108,7 +109,7 @@
       "Type": "CodeProjectAI",
       "TimeoutInSeconds": 2,
       "IsSSL": false,
-      "MovingAverageAlpha": 0.1
+      "MovingAverageAlpha": 0.25
     }
   ]
   //    "Endpoint": "/v2/models/yolov8/infer", //    "ServerName": "192.168.247.170", //    "Port": 8000, //    "Name": "AITENSOR", //    "Type": "Tensor", //    "TimeoutInSeconds": 2, //    "MaxBatchSize": 5, //    "Labels": [ //      "person", //      "bicycle", //      "car", //      "motorcycle", //      "airplane", //      "bus", //      "train", //      "truck", //      "boat", //      "traffic light", //      "fire hydrant", //      "stop sign", //      "parking meter", //      "bench", //      "bird", //      "cat", //      "dog", //      "horse", //      "sheep", //      "cow", //      "elephant", //      "bear", //      "zebra", //      "giraffe", //      "backpack", //      "umbrella", //      "handbag", //      "tie", //      "suitcase", //      "frisbee", //      "skis", //      "snowboard", //      "sports ball", //      "kite", //      "baseball bat", //      "baseball glove", //      "skateboard", //      "surfboard", //      "tennis racket", //      "bottle", //      "wine glass", //      "cup", //      "fork", //      "knife", //      "spoon", //      "bowl", //      "banana", //      "apple", //      "sandwich", //      "orange", //      "broccoli", //      "carrot", //      "hot dog", //      "pizza", //      "donut", //      "cake", //      "chair", //      "couch", //      "potted plant", //      "bed", //      "dining table", //      "toilet", //      "tv", //      "laptop", //      "mouse", //      "remote", //      "keyboard", //      "cell phone", //      "microwave", //      "oven", //      "toaster", //      "sink", //      "refrigerator", //      "book", //      "clock", //      "vase", //      "scissors", //      "teddy bear", //      "hair drier", //      "toothbrush" //    ] //  }
