Added parameters for XStartPercent and XEndPercent to limit the width traversed by the tile creator

--- a/DynamicTileFlow/appsettings.json
+++ b/DynamicTileFlow/appsettings.json
@@ -47,14 +47,18 @@
           "Height": 640,
           "Width": 640,
           "OverlapFactor": 0.2,
-          "ScaleWidth": 640
+          "ScaleWidth": 640,
+          "XStartPercent": 0.2,
+          "XEndPercent": 0.9
         },
         {
           "Y": 0,
           "Height": 640,
           "Width": 640,
           "OverlapFactor": 0.2,
-          "ScaleWidth": 640
+          "ScaleWidth": 640,
+          "XStartPercent": 0.2,
+          "XEndPercent": 0.8
         }
       ]
     }
