Added tile plan index for drawing the same colored tiles representing tile plans

--- a/DynamicTileFlow/DynamicTileFlow.csproj
+++ b/DynamicTileFlow/DynamicTileFlow.csproj
@@ -15,6 +15,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Content Update="appsettings.json">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </Content>
+	</ItemGroup>
+
+	<ItemGroup>
 	  <None Update="LICENSE-ImageSharp.txt">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </None>
