--- a/DynamicTileFlow/appsettings.json
+++ b/DynamicTileFlow/appsettings.json
@@ -32,21 +32,30 @@
           "Y": 0,
           "Height": 2160,
           "Width": 3840,
-          "OverlapFactor": 0.25,
+          "OverlapFactor": 0.5,
           "ScaleWidth": 1280
         },
         {
           "Y": 0,
           "Height": 2160,
           "Width": 1920,
-          "OverlapFactor": 0.25,
+          "OverlapFactor": 0.5,
           "ScaleWidth": 1280
+        },
+        {
+          "Y": 1024,
+          "Height": 640,
+          "Width": 640,
+          "OverlapFactor": 0.5,
+          "ScaleWidth": 640,
+          "XStartPercent": 0,
+          "XEndPercent": 1
         },
         {
           "Y": 512,
           "Height": 640,
           "Width": 640,
-          "OverlapFactor": 0.4,
+          "OverlapFactor": 0.5,
           "ScaleWidth": 640,
           "XStartPercent": 0.2,
           "XEndPercent": 0.85
@@ -55,7 +64,7 @@
           "Y": 0,
           "Height": 640,
           "Width": 640,
-          "OverlapFactor": 0.4,
+          "OverlapFactor": 0.5,
           "ScaleWidth": 640,
           "XStartPercent": 0.2,
           "XEndPercent": 0.65
@@ -82,7 +91,7 @@
       "Type": "CodeProjectAI",
       "TimeoutInSeconds": 3,
       "IsSSL": false,
-      "MovingAverageAlpha": 0.25
+      "MovingAverageAlpha": 0.05
     },
     {
       "Endpoint": "/v1/vision/detection",
@@ -92,7 +101,7 @@
       "Type": "CodeProjectAI",
       "TimeoutInSeconds": 3,
       "IsSSL": false,
-      "MovingAverageAlpha": 0.25
+      "MovingAverageAlpha": 0.05
     },
     {
       "Endpoint": "/v1/vision/detection",
@@ -102,7 +111,7 @@
       "Type": "CodeProjectAI",
       "TimeoutInSeconds": 3,
       "IsSSL": false,
-      "MovingAverageAlpha": 0.25
+      "MovingAverageAlpha": 0.05
     },
     {
       "Endpoint": "/v1/vision/detection",
@@ -112,7 +121,7 @@
       "Type": "CodeProjectAI",
       "TimeoutInSeconds": 3,
       "IsSSL": false,
-      "MovingAverageAlpha": 0.25
+      "MovingAverageAlpha": 0.05
     }
   ]
   //    "Endpoint": "/v2/models/yolov8/infer", //    "ServerName": "192.168.247.170", //    "Port": 8000, //    "Name": "AITENSOR", //    "Type": "Tensor", //    "TimeoutInSeconds": 2, //    "MaxBatchSize": 5, //    "Labels": [ //      "person", //      "bicycle", //      "car", //      "motorcycle", //      "airplane", //      "bus", //      "train", //      "truck", //      "boat", //      "traffic light", //      "fire hydrant", //      "stop sign", //      "parking meter", //      "bench", //      "bird", //      "cat", //      "dog", //      "horse", //      "sheep", //      "cow", //      "elephant", //      "bear", //      "zebra", //      "giraffe", //      "backpack", //      "umbrella", //      "handbag", //      "tie", //      "suitcase", //      "frisbee", //      "skis", //      "snowboard", //      "sports ball", //      "kite", //      "baseball bat", //      "baseball glove", //      "skateboard", //      "surfboard", //      "tennis racket", //      "bottle", //      "wine glass", //      "cup", //      "fork", //      "knife", //      "spoon", //      "bowl", //      "banana", //      "apple", //      "sandwich", //      "orange", //      "broccoli", //      "carrot", //      "hot dog", //      "pizza", //      "donut", //      "cake", //      "chair", //      "couch", //      "potted plant", //      "bed", //      "dining table", //      "toilet", //      "tv", //      "laptop", //      "mouse", //      "remote", //      "keyboard", //      "cell phone", //      "microwave", //      "oven", //      "toaster", //      "sink", //      "refrigerator", //      "book", //      "clock", //      "vase", //      "scissors", //      "teddy bear", //      "hair drier", //      "toothbrush" //    ] //  }
